[package]
name = "run-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0.186", features = ["derive"] }
surrealdb = { version = "1.0.0-beta.9", features = ["kv-rocksdb"] }
tokio = { version = "1.32.0", features = ["full"] }
